temp_inst.txt
[eval]:12
      return `    ${key}: '${value.replace(/'/g, "\'").replace(/\/g, '\\')}'  ,`;
                                                               ^
Unterminated regexp literal

SyntaxError: Invalid regular expression: missing /
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.20.0
